# chatbot-playground

./: .gitignore  .gitmodules  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/library-scripts/: common-debian.sh  node-debian.sh  python-debian.sh
chatbot/: .gitignore  README.md  nx.json  package.json  workspace.json
chatbot/apps/chatbot-backend/: README.md  project.json  pyproject.toml
chatbot/apps/chatbot-backend/chatbot_backend/: __init__.py
chatbot/apps/chatbot-backend/tests/: __init__.py  test_index.py
chatbot/apps/chatbot-tools/: README.md  project.json  pyproject.toml
chatbot/apps/chatbot-tools/chatbot_tools/: __init__.py  index.py
chatbot/apps/chatbot-tools/chatbot_tools/scrapy/: google_support_docs_spider.py  run.py
chatbot/apps/chatbot-tools/tests/: test_index.py
chatbot/scripts/: update_tests.sh
docker/: .gitignore
docker/haystack/: .gitignore  docker-compose.yaml  document-search.haystack-pipeline.yml
docker/haystack/pipeline/: custom_component.py  document-search.haystack-pipeline.new.yml
docker/jupyterlab/: docker-compose.yaml
docker/rasa/: docker-compose.yaml
notebooks/: .gitignore  data_processing.ipynb
rasa/: Makefile  domain.yml  endpoints.yml
rasa/.config/rasa/: global.yml
rasa/actions/: actions.py
rasa/data/: nlu.yml  stories.yml
