[tool.coverage.run]
branch = true
source = [ "chatbot_backend" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-fail-under=100 --cov-report html:'../../coverage/apps/chatbot-backend/html' --cov-report xml:'../../coverage/apps/chatbot-backend/coverage.xml' --junitxml='../../reports/apps/chatbot-backend/unittests/junit.xml' --html='../../reports/apps/chatbot-backend/unittests/html/index.html'"

[tool.poetry]
name = "chatbot-backend"
version = "1.0.0"
description = "Chatbot Backend"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "chatbot_backend"

  [tool.poetry.dependencies]
  python = ">=3.8,<3.10"
  fastapi = "^0.92.0"
  uvicorn = "^0.20.0"
  "farm-haystack[sql,only-faiss-gpu]" = {git = "https://github.com/deepset-ai/haystack.git"}


  [tool.poetry.group.dev.dependencies]
  flake8 = "4.0.1"
  flake8-isort = "4.1.1"
  flake8-print = "5.0.0"
  flake8-pytest-style = "1.6.0"
  flake8-docstrings = "1.6.0"
  flake8-type-checking = "2.0.6"
  autopep8 = "1.5.7"
  pytest = "7.1.2"
  pytest-env = "0.6.2"
  pytest-cov = "3.0.0"
  pytest-html = "3.1.1"
  pytest-sugar = "0.9.5"
  tomli = "1.2.2"
  tox = "3.23.1"


[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"
